--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,3 +1,6 @@
+---
+import './src/styles/global.css'
+---
 <!doctype html>
 <html lang="en">
 	<head>
@@ -5,7 +8,7 @@
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro Basics</title>
+		<title>Memoraire</title>
 	</head>
 	<body>
 		<slot />
@@ -18,5 +21,6 @@
 		margin: 0;
 		width: 100%;
 		height: 100%;
+		box-sizing: border-box;
 	}
 </style>
