--- a/src/components/Register.astro
+++ b/src/components/Register.astro
@@ -95,7 +95,7 @@
           
           <p class="text-center text-sm text-gray-600 mt-4">
             Already have an account? 
-            <a href="#" class="text-blue-600 hover:text-blue-800 font-medium">Sign in</a>
+            <a href="/login" class="text-blue-600 hover:text-blue-800 font-medium">Sign in</a>
           </p>
         </div>
       </form>
