fix:fix some texts

--- a/src/components/Home.astro
+++ b/src/components/Home.astro
@@ -82,6 +82,7 @@ import MemoraireButton from '../components/Button.astro';
         <p class="text-xs text-gray-500">Review your journey anytime</p>
       </div>
     </div>
+    <div class="text-center mb-2 text-gray-500">by hoga</div>
   </main>
 </div>
 
