--- a/src/components/Main.astro
+++ b/src/components/Main.astro
@@ -69,12 +69,14 @@ const totalPages = 3;
         </div>
         
         <div class="flex items-center space-x-4">
-          <button id="profile-btn" class="bg-white bg-opacity-20 hover:bg-opacity-30 text-slate-600 px-4 py-2 rounded-lg flex items-center transition-all">
-            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2" viewBox="0 0 20 20" fill="currentColor">
-              <path fill-rule="evenodd" d="M10 9a3 3 0 100-6 3 3 0 000 6zm-7 9a7 7 0 1114 0H3z" clip-rule="evenodd" />
-            </svg>
-            Profile
-          </button>
+            <a href="/profile">
+                <button id="profile-btn" class="bg-white bg-opacity-20 hover:bg-opacity-30 text-slate-600 px-4 py-2 rounded-lg flex items-center transition-all">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2" viewBox="0 0 20 20" fill="currentColor">
+                      <path fill-rule="evenodd" d="M10 9a3 3 0 100-6 3 3 0 000 6zm-7 9a7 7 0 1114 0H3z" clip-rule="evenodd" />
+                    </svg>
+                    Profile
+                  </button>
+            </a>
           
           <button id="logout-btn" class="bg-white hover:bg-gray-100 text-violet-700 px-4 py-2 rounded-lg flex items-center transition-all">
             <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2" viewBox="0 0 20 20" fill="currentColor">
